# PIC3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  data.py  g.txt  load_particle.py  main.cpp  plot_3d.py  requirements.txt  run.sh  setup.py
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: boundary.h  constants.h  field.h  grid.h  io.h  io_utils.h  mpi_utils.h  particle.h  simulation.h
pic3d/: __init__.py  constants.py  fields.py  grid.py  laser.py  particles.py  simulation.py
pic3d/examples/: __init__.py  laser_plasma_example.py
python/: analysis.py  requirements.txt
src/: boundary.cpp  constants.cpp  field.cpp  grid.cpp  io.cpp  io_utils.cpp  main.cpp  mpi_utils.cpp  particle.cpp  simulation.cpp
tests/: __init__.py  test_fields.py  test_grid.py  test_laser.py  test_particles.py  test_simulation.py
